test_regress/t/t_interface_dearray_bad.out
%Error-UNSUPPORTED: t/t_interface_dearray_bad.v:23:9: Unexpected target of interface assignment ['IFACEREFDTYPE$[0:5]']
                                                    : ... note: In instance 'tb_top'
   23 |       a = f;
      |         ^
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_interface_dearray_bad.v:26:13: Array size mismatch in interface assignment
                                                     : ... note: In instance 'tb_top'
   26 |       c.vif = b;
      |             ^
%Error: t/t_interface_dearray_bad.v:31:23: Expecting expression to be constant, but variable isn't const: 'i'
                                         : ... note: In instance 'tb_top'
   31 |          d.vif[i] = a[i];
      |                       ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error-UNSUPPORTED: t/t_interface_dearray_bad.v:31:23: Non-constant index in RHS interface array selection
                                                     : ... note: In instance 'tb_top'
   31 |          d.vif[i] = a[i];
      |                       ^
%Error-UNSUPPORTED: t/t_interface_dearray_bad.v:35:16: Interface slices unsupported
                                                     : ... note: In instance 'tb_top'
   35 |       e.vif = b[0:5];
      |                ^
%Error: Internal Error: t/t_interface_dearray_bad.v:23:11: ../V3Broken.cpp:#: Broken link in node (or something without maybePointedTo): 'm_varp && !m_varp->brokeExists()' @ ./V3Ast__gen_impl.h:#
                                                         : ... note: In instance 'tb_top'
   23 |       a = f;
      |           ^
                        ... This fatal error may be caused by the earlier error(s); resolve those first.
